# EmptyCProject

./: .clang-tidy  meson.build
src/: source.c
tests/: AllTests.cpp  testFile.cpp
